--- a/css/style.css
+++ b/css/style.css
@@ -222,76 +222,24 @@ button {
 
 .second_section {
     margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.bloc1 {
+.bloc_lodging {
     background-color: #f2f2f2;
-    width: 75%;
     border-radius: 15px;
-    padding: 30px 40px;
+    padding: 0 40px;
 }
 
-.title_bloc1 h3 {
-    padding-bottom: 30px;
-    margin: 0;
-}
-
-.card {
-    width: 250px;
-    height: 200px;
-    background-color: white;
+.bloc_famous {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #f2f2f2;
     border-radius: 15px;
-    padding: 5px;
-    box-shadow: 0px 5px 20px #999;
-    position: relative;
-}
-
-.card_image {
-    width: 100%;
-    height: 115px;
-    overflow: hidden;
-    border-radius: 15px 15px 0 0;
-}
-
-.card_image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.card_info {
-    padding: 0 10px;
-}
-
-.card_info h3 {
-    margin: 5px 0;
-    font-size: 16px;
-    font-weight: 700;
-}
-
-.card_info p {
-    margin: 0 0 5px 0;
-    font-size: 15px;
-}
-
-.lodging_star {
-    font-size: 13px;
-}
-
-.star_blue {
-    color: #0065FC;
-}
-
-.star_gray {
-    color: #f2f2f2;
-}
-
-.card_link {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+    padding: 0 40px;
 }
 
 /* Footer css */
