--- a/css/style.css
+++ b/css/style.css
@@ -222,24 +222,78 @@ button {
 
 .second_section {
     margin-top: 25px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .bloc_lodging {
     background-color: #f2f2f2;
-    border-radius: 15px;
-    padding: 0 40px;
+    border-radius: 20px;
+    padding: 30px 40px;
 }
 
-.bloc_famous {
+.title_lodging h3 {
+    margin: 0 0 20px 0;
+    font-size: 19px;
+    font-weight: 700;
+}
+
+.lcard {
+    width: 250px;
+    height: 200px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
+}
+
+.lcard:hover {
+    transform: scale(1.1);
+}
+
+.lcard_img {
+    width: 100%;
+    height: 120px;
+    overflow: hidden;
+    padding: 5px;
+}
+
+.lcard_img img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px 20px 0 0;
+}
+
+.lcard_content {
+    height: 80px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #f2f2f2;
-    border-radius: 15px;
-    padding: 0 40px;
+    flex-direction: column;
+}
+
+.lcard_content h3 {
+    margin: 0;
+    padding: 5px 15px;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.lcard_content p {
+    margin: 0;
+    padding: 0 15px;
+    font-size: 15px;
+}
+
+.lcard_rating {
+    display: flex;
+    flex-direction: row;
+    font-size: 13px;
+    padding: 5px 15px;
+}
+
+.blue_star {
+    color: #0065FC;
+}
+
+.grey_star {
+    color: #f2f2f2;
 }
 
 /* Footer css */
