--- a/css/style.css
+++ b/css/style.css
@@ -218,10 +218,13 @@ button {
     font-weight: bold;
 }
 
-/* css hébergements Marseille + Plus populaire */
+/* hébergements Marseille */
 
 .second_section {
     margin-top: 25px;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
 }
 
 .bloc_lodging {
@@ -240,7 +243,6 @@ button {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .lcard {
@@ -249,6 +251,7 @@ button {
     background-color: white;
     border-radius: 20px;
     box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
+    margin: 30px;
 }
 
 .lcard:hover {
@@ -266,7 +269,7 @@ button {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 20px 20px 0 0;
+    border-radius: 15px 15px 0 0;
 }
 
 .lcard_content {
@@ -307,6 +310,90 @@ button {
     margin-top: 25px;
     font-weight: 700;
     font-size: 19px;
+}
+
+/* Les plus populaires */
+
+.bloc_famous {
+    background-color: #f2f2f2;
+    border-radius: 20px;
+    padding: 30px 40px;
+}
+
+.top_famous {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.top_famous h3 {
+    margin: 0;
+}
+
+.fcard_list {
+    padding-top: 20px;
+}
+
+.fcard {
+    width: 345px;
+    height: 145px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
+    margin: 30px 0;
+}
+
+.fcard:hover {
+    transform: scale(1.1);
+}
+
+.fcard a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.fcard_img {
+    width: 132px;
+    height: 100%;
+    overflow: hidden;
+    padding: 5px 20px 5px 5px;
+}
+
+.fcard_img img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px 0 0 15px;
+}
+
+.fcard_content {
+    height: 100%;
+    width: 213px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 37px 0 0;
+}
+
+.fcard_content h3 {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.fcard_content p {
+    margin: 0;
+    font-size: 15px;
+    padding-top: 5px;
+}
+
+.fcard_rating {
+    display: flex;
+    flex-direction: row;
+    font-size: 13px;
+    padding-top: 40px;
 }
 
 /* Footer css */
