--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@ button {
 }
 
 .filter_box:hover {
+    transform: scale(1.05);
     color: #0065FC;
 }
 
@@ -230,19 +231,19 @@ button {
 .bloc_lodging {
     background-color: #f2f2f2;
     border-radius: 20px;
-    padding: 30px 40px;
+    padding: 0 40px;
 }
 
 .title_lodging h3 {
-    margin: 0 0 20px 0;
+    margin: 32px 0 32px 0;
     font-size: 22px;
     font-weight: 700;
 }
 
 .lcard_list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    column-gap: 32px;
 }
 
 .lcard {
@@ -251,11 +252,11 @@ button {
     background-color: white;
     border-radius: 20px;
     box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
-    margin: 30px;
+    margin-bottom: 32px;
 }
 
 .lcard:hover {
-    transform: scale(1.1);
+    transform: scale(1.02);
 }
 
 .lcard_img {
@@ -307,9 +308,9 @@ button {
 }
 
 .more_content {
-    margin-top: 25px;
     font-weight: 700;
     font-size: 19px;
+    margin-top: 32px;
 }
 
 /* Les plus populaires */
@@ -317,7 +318,7 @@ button {
 .bloc_famous {
     background-color: #f2f2f2;
     border-radius: 20px;
-    padding: 30px 40px;
+    padding: 0 40px;
 }
 
 .top_famous {
@@ -327,7 +328,7 @@ button {
 }
 
 .top_famous h3 {
-    margin: 0;
+    margin: 32px 0 32px 0;
     font-size: 22px;
     font-weight: 700;
 }
@@ -337,7 +338,10 @@ button {
 }
 
 .fcard_list {
-    padding-top: 20px;
+    display: grid;
+    grid-template-rows: auto repeat(3, 1fr);
+    align-items: flex-start;
+    row-gap: 16px;
 }
 
 .fcard {
@@ -346,11 +350,10 @@ button {
     background-color: white;
     border-radius: 20px;
     box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
-    margin: 30px 0;
 }
 
 .fcard:hover {
-    transform: scale(1.1);
+    transform: scale(1.02);
 }
 
 .fcard a {
@@ -413,7 +416,7 @@ footer {
 
 .footer_list {
     display: flex;
-    gap: 200px;
+    gap: 300px;
 }
 
 .footer_section a {
