--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,14 @@ ul {
     list-style-type: none;
 }
 
+h3,
+p {
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 header {
     display: flex;
     height: 75px;
@@ -225,34 +233,43 @@ button {
     margin-top: 25px;
     display: flex;
     flex-direction: row;
-    gap: 40px;
+    gap: 3%;
 }
 
 .bloc_lodging {
     background-color: #f2f2f2;
     border-radius: 20px;
-    padding: 0 40px;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.title_lodging {
+    padding: 0 40px 0 40px;
 }
 
 .title_lodging h3 {
-    margin: 32px 0 32px 0;
     font-size: 22px;
     font-weight: 700;
+    margin-block-start: 40px;
 }
 
 .lcard_list {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    column-gap: 32px;
+    padding: 0 40px 0 40px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 40px;
 }
 
 .lcard {
-    width: 250px;
+    width: 30%;
     height: 200px;
     background-color: white;
     border-radius: 20px;
     box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
-    margin-bottom: 32px;
+
 }
 
 .lcard:hover {
@@ -260,8 +277,9 @@ button {
 }
 
 .lcard_img {
-    width: 100%;
-    height: 120px;
+    width: auto;
+    flex: 1;
+    height: 60%;
     overflow: hidden;
     padding: 5px;
 }
@@ -274,21 +292,19 @@ button {
 }
 
 .lcard_content {
-    height: 80px;
+    height: 40%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    padding: 0 15px 10px 15px;
 }
 
 .lcard_content h3 {
-    margin: 0;
-    padding: 5px 15px;
     font-size: 16px;
     font-weight: 700;
 }
 
 .lcard_content p {
-    margin: 0;
-    padding: 0 15px;
     font-size: 15px;
 }
 
@@ -296,7 +312,6 @@ button {
     display: flex;
     flex-direction: row;
     font-size: 13px;
-    padding: 5px 15px;
 }
 
 .blue_star {
@@ -308,9 +323,9 @@ button {
 }
 
 .more_content {
+    padding: 0 40px 0 40px;
     font-weight: 700;
     font-size: 19px;
-    margin-top: 32px;
 }
 
 /* Les plus populaires */
@@ -318,7 +333,7 @@ button {
 .bloc_famous {
     background-color: #f2f2f2;
     border-radius: 20px;
-    padding: 0 40px;
+    width: 32%;
 }
 
 .top_famous {
