--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ ul {
     list-style-type: none;
 }
 
+h1,
 h3,
 p {
     margin-block-start: 0px;
@@ -72,7 +73,7 @@ main {
 
 .title_first h1 {
     font-size: 24px;
-    margin: 0;
+    /* margin: 0; */
 }
 
 .title_first p {
@@ -323,7 +324,7 @@ button {
 }
 
 .more_content {
-    padding: 0 40px 0 40px;
+    padding: 0 40px;
     font-weight: 700;
     font-size: 19px;
 }
