--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ button {
     font-weight: bold;
 }
 
-/* hébergements Marseille */
+/* Hébergements Marseille */
 
 .second_section {
     margin-top: 25px;
@@ -398,21 +398,20 @@ button {
 }
 
 .fcard_content {
-    height: 100%;
     width: 60%;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     flex-direction: column;
-    padding: 20px 37px 0 0;
+    padding: 10px 20px 0 0;
 }
 
 .fcard_content h3 {
-    margin: 0;
     font-size: 16px;
     font-weight: 700;
 }
 
 .fcard_content p {
-    margin: 0;
     font-size: 15px;
     padding-top: 5px;
 }
@@ -421,7 +420,7 @@ button {
     display: flex;
     flex-direction: row;
     font-size: 13px;
-    padding-top: 40px;
+    padding: 40px 0 10px 0;
 }
 
 /* Footer css */
@@ -439,8 +438,11 @@ footer {
 }
 
 .footer_section a {
-    margin: 0;
     padding-bottom: 10px;
+}
+
+.footer_section h3 {
+    padding-bottom: 15px;
 }
 
 .footer_section {
