--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ button {
 */
 
 .second_section {
-    margin: 25px 0 50px 0;
+    padding: 25px 0;
     display: flex;
     flex-direction: row;
     gap: 3%;
@@ -434,6 +434,10 @@ button {
 *Css du bloc "Activités à Marseille" 
 */
 
+.third_section {
+    padding: 25px 0;
+}
+
 .title_activity {
     font-size: 20px;
     font-weight: 700;
@@ -444,11 +448,11 @@ button {
     display: flex;
     flex-direction: row;
     height: 500px;
+    gap: 30px;
 }
 
 .activity_1 {
     width: 25%;
-    padding-right: 15px;
 }
 
 .big_card {
@@ -494,7 +498,9 @@ button {
 
 .activity_2 {
     width: 25%;
-    padding: 0 15px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
 }
 
 .medium1_card {
@@ -502,7 +508,7 @@ button {
     flex-direction: column;
     border-radius: 20px;
     box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
-    height: 300px;
+    height: 285px;
 }
 
 .medium1_card:hover {
@@ -515,7 +521,7 @@ button {
 }
 
 .medium1_img {
-    height: 240px;
+    height: 225px;
     overflow: hidden;
 }
 
@@ -527,6 +533,125 @@ button {
 }
 
 .medium1_content {
+    height: 60px;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+}
+
+.small1_card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
+    height: 185px;
+}
+
+.small1_card:hover {
+    transform: scale(1.02);
+}
+
+.small1_card a {
+    width: 100%;
+    height: 100%;
+}
+
+.small1_img {
+    height: 125px;
+    overflow: hidden;
+}
+
+.small1_img img {
+    border-radius: 20px 20px 0 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.small1_content {
+    height: 60px;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+}
+
+.activity_3 {
+    width: 25%;
+}
+
+.activity_4 {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+}
+
+.small2_card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
+    height: 205px;
+}
+
+.small2_card:hover {
+    transform: scale(1.02);
+}
+
+.small2_card a {
+    width: 100%;
+    height: 100%;
+}
+
+.small2_img {
+    height: 145px;
+    overflow: hidden;
+}
+
+.small2_img img {
+    border-radius: 20px 20px 0 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.small2_content {
+    height: 60px;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+}
+
+.medium2_card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    box-shadow: -4px 4px 11px 5px rgb(0 0 0 / 20%);
+    height: 265px;
+}
+
+.medium2_card:hover {
+    transform: scale(1.02);
+}
+
+.medium2_card a {
+    width: 100%;
+    height: 100%;
+}
+
+.medium2_img {
+    height: 205px;
+    overflow: hidden;
+}
+
+.medium2_img img {
+    border-radius: 20px 20px 0 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.medium2_content {
     height: 60px;
     padding: 0 20px;
     display: flex;
