--- a/css/style.css
+++ b/css/style.css
@@ -80,9 +80,7 @@ main {
     margin: 0;
 }
 
-/* 
-*Css de la barre de recherche
-*/
+/* *Css de la barre de recherche*/
 
 .search_zone {
     height: 50px;
@@ -144,9 +142,7 @@ button {
     border-radius: 15px;
 }
 
-/* 
-*Css de la barre des filtres
-*/
+/* *Css de la barre des filtres*/
 
 .filter_list {
     display: flex;
@@ -236,9 +232,7 @@ button {
     font-weight: bold;
 }
 
-/* 
-* Css du bloc "Hébergements Marseille"
-*/
+/* * Css du bloc "Hébergements Marseille"*/
 
 .second_section {
     padding: 25px 0;
@@ -339,9 +333,7 @@ button {
     font-size: 19px;
 }
 
-/* 
-* Css du bloc "Les plus populaires"
-*/
+/* * Css du bloc "Les plus populaires"*/
 
 .bloc_famous {
     background-color: #f2f2f2;
@@ -429,9 +421,7 @@ button {
     font-size: 13px;
 }
 
-/* 
-*Css du bloc "Activités à Marseille" 
-*/
+/* *Css du bloc "Activités à Marseille" */
 
 .third_section {
     padding: 25px 0;
@@ -657,9 +647,7 @@ button {
     align-items: center;
 }
 
-/* 
-* Css du bloc "footer"
-*/
+/* * Css du bloc "footer"*/
 
 footer {
     background-color: #f2f2f2;
