--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,14 @@ nav a:hover {
     border-top: 3px solid #0065FC;
 }
 
-/* *Css du bloc main */
+/* *Css du bloc main (first section) */
 
 main {
     padding: 0 60px;
+}
+
+.first_section {
+    padding: 0;
 }
 
 .title_first {
@@ -154,9 +158,9 @@ button {
 .filter_list {
     display: flex;
     align-items: center;
+    flex-direction: row;
     margin: 25px 0;
-    gap: 30px;
-    height: 50px;
+    gap: 15px;
 }
 
 .filter_title {
@@ -165,14 +169,14 @@ button {
     justify-content: center;
     font-size: 20px;
     font-weight: 700;
-    height: 100%;
 }
 
 .filter {
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 100%;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
 }
 
 .filter_box {
@@ -186,6 +190,7 @@ button {
     margin-right: 15px;
     position: relative;
     cursor: pointer;
+    height: 50px;
 }
 
 .filter_icon {
@@ -237,7 +242,7 @@ button {
     font-size: 14px;
 }
 
-/* * Css du bloc "Hébergements Marseille"*/
+/* * Css du bloc "Hébergements Marseille" (second section) */
 
 .second_section {
     padding: 25px 0;
@@ -336,6 +341,7 @@ button {
     padding: 0 40px;
     font-weight: 700;
     font-size: 20px;
+    margin-block-end: 40px;
 }
 
 /* * Css du bloc "Les plus populaires"*/
@@ -371,11 +377,10 @@ button {
     padding-bottom: 40px;
     display: flex;
     flex-direction: column;
-    row-gap: 40px;
+    gap: 40px;
 }
 
 .fcard {
-    width: auto;
     height: 145px;
     background-color: white;
     border-radius: 20px;
@@ -410,7 +415,6 @@ button {
     width: 60%;
     display: flex;
     flex: 1;
-    flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
     padding: 15px 0;
@@ -422,7 +426,6 @@ button {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 5px;
 }
 
 .top_fcardcontent h3 {
@@ -440,7 +443,7 @@ button {
     font-size: 13px;
 }
 
-/* *Css du bloc "Activités à Marseille" */
+/* *Css du bloc "Activités à Marseille" (third section) */
 
 .third_section {
     padding: 30px 0 50px 0;
@@ -450,6 +453,7 @@ button {
     font-size: 20px;
     font-weight: 700;
     margin-block-end: 20px;
+    padding: 0px;
 }
 
 .activity_list {
@@ -460,7 +464,7 @@ button {
 
 .activity_1 {
     width: 25%;
-    padding-right: 15px;
+    padding: 0 15px 0 0;
 }
 
 .big_card {
@@ -508,7 +512,7 @@ button {
     width: 25%;
     display: flex;
     flex-direction: column;
-    row-gap: 30px;
+    gap: 30px;
     padding: 0 15px;
 }
 
@@ -603,8 +607,8 @@ button {
     width: 25%;
     display: flex;
     flex-direction: column;
-    row-gap: 30px;
-    padding-left: 15px;
+    gap: 30px;
+    padding: 0 0 0 15px;
 }
 
 .small2_card {
@@ -703,6 +707,7 @@ footer {
     display: flex;
     flex: 1;
     flex-wrap: wrap;
+    justify-content: flex-start;
     gap: 20%;
 }
 
