--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,8 +18,17 @@
         padding: 0px;
     }
 
+    .title_first h1,
+    .title_first p {
+        padding: 0 20px;
+    }
+
 
     /* *Css de la barre de recherche*/
+
+    .search_zone {
+        padding: 0 20px;
+    }
 
     button {
         display: none;
@@ -27,6 +36,17 @@
 
     #mobile_button {
         display: flex;
+    }
+
+    /* *Css de la barre des filtres*/
+
+    .filter_list {
+        padding: 0 20px;
+        gap: 0;
+    }
+
+    .info {
+        padding: 0 20px;
     }
 
     /* * Css du bloc "Hébergements Marseille" (second section) */
