--- a/css/style.css
+++ b/css/style.css
@@ -241,9 +241,7 @@ button {
 
 .info {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  height: 25px;
   gap: 10px;
   padding: 0;
 }
@@ -252,8 +250,8 @@ button {
   font-size: 15px;
 }
 
-.info_icon {
-  height: 100%;
+.info i {
+  height: 25px;
   min-width: 25px;
   color: #0065fc;
   border: 2px solid #f2f2f2;
