--- a/css/mobile.css
+++ b/css/mobile.css
@@ -40,7 +40,7 @@
 
   .title_first h1,
   .title_first p {
-    padding: 0 20px;
+    padding: 5px 20px;
   }
 
   /* *Css de la barre de recherche*/
